--- a/RawWebPro/css/justified-nav.css
+++ b/RawWebPro/css/justified-nav.css
@@ -9,11 +9,12 @@
   margin-top: 40px;
   border-top: 1px solid #eee;
 
-  position:absolute; 
+  position:relative; 
   bottom:0px; 
   width:100%; 
   clear:both;
 }
+
 
 /* Main marketing message and sign up button */
 .jumbotron {
