--- a/RawWebPro/css/justified-nav.css
+++ b/RawWebPro/css/justified-nav.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿/*body {
   padding-top: 30px;
    padding-bottom: 40px;
 }
@@ -13,6 +13,37 @@
   bottom:0px; 
   width:100%; 
   clear:both;
+}*/
+
+/*导航部分主层*/
+.nav-main {
+  background-color:none;
+  width:100%;
+  height:74px;
+
+  border-bottom-color:#ff0000;
+  border-bottom-style:solid;
+}
+
+/*导航部分内容层*/
+.nav-content {
+  width:100%;
+  margin-top:41px;
+}
+
+/*导航部分内部导航层*/
+.nav-inner {
+  width:100%;
+  margin-top:45px;
+}
+/*导航内容-品牌*/
+.nav-brand {
+    margin-top:0px;
+}
+
+/*导航内部-导航按钮*/
+.nav-btn {
+
 }
 
 
@@ -63,7 +94,7 @@
   border-radius: 0 0 5px 5px;
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
   .nav-justified {
     max-height: 52px;
   }
@@ -81,13 +112,12 @@
   }
 }
 
-/* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
+
   .masthead,
   .marketing,
   .footer {
     padding-right: 0;
     padding-left: 0;
   }
-}
+}*/
